rendered/before/mycure-preprod/mycurelocal.yaml
---
# Source: mycurelocal/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mycurelocal
  namespace: mycure-preprod
  labels:
    helm.sh/chart: mycurelocal-1.0.0
    app.kubernetes.io/name: mycurelocal
    app.kubernetes.io/instance: mycurelocal
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycurelocal
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mycurelocal
      app.kubernetes.io/instance: mycurelocal
  policyTypes:
    - Ingress
    - Egress
---
# Source: mycurelocal/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mycurelocal
  namespace: mycure-preprod
  labels:
    helm.sh/chart: mycurelocal-1.0.0
    app.kubernetes.io/name: mycurelocal
    app.kubernetes.io/instance: mycurelocal
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycurelocal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mycurelocal
    app.kubernetes.io/instance: mycurelocal
---
# Source: mycurelocal/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycurelocal
  namespace: mycure-preprod
  labels:
    helm.sh/chart: mycurelocal-1.0.0
    app.kubernetes.io/name: mycurelocal
    app.kubernetes.io/instance: mycurelocal
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycurelocal
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: mycurelocal
      app.kubernetes.io/instance: mycurelocal
  template:
    metadata:
      annotations:
        checksum/config: ec4407c683ca5432373e2923f51937320866f1db54b1fc701bd82d01f6214ae9
      labels:
        app.kubernetes.io/name: mycurelocal
        app.kubernetes.io/instance: mycurelocal
    spec:
      serviceAccountName: mycurelocal
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: mycurelocal
        securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
        image: "ghcr.io/mycurelabs/mycurelocal:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: caddy-data
          mountPath: /data
        - name: caddy-config
          mountPath: /config
      volumes:
      - name: tmp
        emptyDir: {}
      - name: caddy-data
        emptyDir: {}
      - name: caddy-config
        emptyDir: {}
      nodeSelector:
        node-pool: staging
      tolerations:
        - key: "node-pool"
          operator: "Equal"
          value: "staging"
          effect: "NoSchedule"
---
# Source: mycurelocal/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mycurelocal
  namespace: mycure-preprod
  labels:
    helm.sh/chart: mycurelocal-1.0.0
    app.kubernetes.io/name: mycurelocal
    app.kubernetes.io/instance: mycurelocal
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycurelocal
spec:
  parentRefs:
    - name: nginx-shared-gateway
      namespace: nginx-gateway-system
      sectionName: https  # Default: attach to HTTPS listener
  hostnames:
    - mycurelocal.preprod.localfirsthealth.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mycurelocal
          port: 80
          weight: 1
